--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                <div class="form-container">
                 <div class="labelText">
                     <label for="email">Email address</label>
-                    <label id="hidden" for="">Valid email required</label>
+                    <label id="hidden" for="email">Valid email required</label>
                 </div>
                 <div class="form">
                     <form id="myForm">
